- fixed relation between GrantSubsidy and GrantInsurance - using rootDomainObject instead of DAO access - using domain delete methods instead of explicit DAO deletes